--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -1,45 +1,106 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# Example usage\n",
-                "\n",
-                "To use `city_ticketmaster` in a project:"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
-                "import city_ticketmaster\n",
-                "\n",
-                "print(city_ticketmaster.__version__)"
-            ],
-            "outputs": [],
-            "metadata": {}
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.5"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example usage\n",
+    "\n",
+    "To use `city_ticketmaster` in a project:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following packages are already present in the pyproject.toml and will be skipped:\n",
+      "\n",
+      "  • \u001b[36mpandas\u001b[39m\n",
+      "\n",
+      "If you want to update it to the latest compatible version, you can use `poetry update package`.\n",
+      "If you prefer to upgrade it to the latest available version, you can use `poetry add package@latest`.\n",
+      "\n",
+      "Nothing to add.\n",
+      "The following packages are already present in the pyproject.toml and will be skipped:\n",
+      "\n",
+      "  • \u001b[36mpytest\u001b[39m\n",
+      "\n",
+      "If you want to update it to the latest compatible version, you can use `poetry update package`.\n",
+      "If you prefer to upgrade it to the latest available version, you can use `poetry add package@latest`.\n",
+      "\n",
+      "Nothing to add.\n",
+      "The following packages are already present in the pyproject.toml and will be skipped:\n",
+      "\n",
+      "  • \u001b[36mrequests\u001b[39m\n",
+      "\n",
+      "If you want to update it to the latest compatible version, you can use `poetry update package`.\n",
+      "If you prefer to upgrade it to the latest available version, you can use `poetry add package@latest`.\n",
+      "\n",
+      "Nothing to add.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!poetry add pandas\n",
+    "!poetry add pytest\n",
+    "!poetry add requests\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "key=os.getenv('CONSUMER_KEY')\n",
+    "from city_ticketmaster import city_ticketmaster\n",
+    "\n",
+    "city_ticketmaster.apiget(city='New York', password = key)\n",
+    "\n",
+    "LA = city_ticketmaster.City(cityname= 'Los Angeles', password = key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_ticketmaster.apiget(city='New York', password = key)\n",
+    "\n",
+    "LA = city_ticketmaster.City(cityname= 'Los Angeles', password = key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
